src/raylib/raylib3.pas


  // Window-related functions
  // Initialize window and OpenGL context
    InitWindow: procedure(Width: Integer; Height: Integer; const Title: PUTF8Char); cdecl;
  // Check if KEY_ESCAPE pressed or Close icon pressed
    WindowShouldClose: function: boolean; cdecl;
    CloseWindow: procedure; cdecl;
    IsWindowReady: function: boolean; cdecl;
    IsWindowMinimized: function: boolean; cdecl;
    IsWindowResized: function: boolean; cdecl;
    IsWindowHidden: function: boolean; cdecl;
    IsWindowFullscreen: function: boolean; cdecl;
    ToggleFullscreen: procedure; cdecl;
    UnhideWindow: procedure; cdecl;
    HideWindow: procedure; cdecl;
    SetWindowIcon: procedure(image: TImage); cdecl;
    SetWindowTitle: procedure(const title: PUTF8Char); cdecl;
    SetWindowPosition: procedure(x: Integer; y: Integer); cdecl;
    SetWindowMonitor: procedure(monitor: Integer); cdecl;
    SetWindowMinSize: procedure(width: Integer; height: Integer); cdecl;
    SetWindowSize: procedure(width: Integer; height: Integer); cdecl;
    GetWindowHandle: function: Pointer; cdecl;
    GetScreenWidth: function: Integer; cdecl;
    GetScreenHeight: function: Integer; cdecl;
    GetMonitorCount: function: Integer; cdecl;
    GetMonitorWidth: function(monitor: Integer): Integer; cdecl;
    GetMonitorHeight: function(monitor: Integer): Integer; cdecl;
    GetMonitorPhysicalWidth: function(monitor: Integer): Integer; cdecl;
    GetMonitorPhysicalHeight: function(monitor: Integer): Integer; cdecl;
    GetWindowPosition: function: TVector2; cdecl;
    GetMonitorName: function(monitor: Integer): PUTF8Char; cdecl;
    GetClipboardText: function: PUTF8Char; cdecl;
    SetClipboardText: procedure(const text: PUTF8Char); cdecl;

  // Cursor-related functions
    ShowCursor: procedure; cdecl;
    HideCursor: procedure; cdecl;
    IsCursorHidden: function: boolean; cdecl;
    EnableCursor: procedure; cdecl;
    DisableCursor: procedure; cdecl;

  // Drawing-related functions
    ClearBackground: procedure(color: TColor); cdecl;
    BeginDrawing: procedure; cdecl;
    EndDrawing: procedure; cdecl;
    BeginMode2D: procedure(camera: TCamera2D); cdecl;
    EndMode2D: procedure; cdecl;
    BeginMode3D: procedure(camera: TCamera3D); cdecl;
    EndMode3D: procedure; cdecl;
    BeginTextureMode: procedure(target: TRenderTexture2D); cdecl;
    EndTextureMode: procedure; cdecl;
    BeginScissorMode: procedure(x: Integer; y: Integer; width: Integer; height: Integer); cdecl;
    EndScissorMode: procedure; cdecl;

  // Screen-space-related functions
    GetMouseRay: function(mousePosition: TVector2; camera: TCamera): TRay; cdecl;
    GetCameraMatrix: function(camera: TCamera): TMatrix; cdecl;
    GetCameraMatrix2D: function(camera: TCamera2D): TMatrix; cdecl;
    GetWorldToScreen: function(position: TVector3; camera: TCamera): TVector2; cdecl;
    GetWorldToScreenEx: function(position: TVector3; camera: TCamera; width: Integer; height: Integer): TVector2; cdecl;
    GetWorldToScreen2D: function(position: TVector2; camera: TCamera2D): TVector2; cdecl;
    GetScreenToWorld2D: function(position: TVector2; camera: TCamera2D): TVector2; cdecl;

  // Timing-related functions
    SetTargetFPS: procedure(fps: Integer); cdecl;
    GetFPS: function: Integer; cdecl;
    GetFrameTime: function: Single; cdecl;
    GetTime: function: Double; cdecl;

  // Color-related functions
    ColorToInt: function(color: TColor): Integer; cdecl;
    ColorNormalize: function(color: TColor): TVector4; cdecl;
    ColorFromNormalized: function(normalized: TVector4): TColor; cdecl;
    ColorToHSV: function(color: TColor): TVector3; cdecl;
    ColorFromHSV: function(hsv: TVector3): TColor; cdecl;
    GetColor: function(hexValue: Integer): TColor; cdecl;
    Fade: function(color: TColor; Alpha: Single): TColor; cdecl;

  // Misc. functions
    SetConfigFlags: procedure(flags: Cardinal); cdecl;
    SetTraceLogLevel: procedure(logType: TTraceLogType); cdecl;
    SetTraceLogExit: procedure(logType: Integer); cdecl;
    SetTraceLogCallback: procedure(callback: TTraceLogCallback); cdecl;
    TraceLog: procedure(logType: Integer; const text: PUTF8Char) varargs; cdecl;
    TakeScreenshot: procedure(const fileName: PUTF8Char); cdecl;
    GetRandomValue: function(min: Integer; max: Integer): Integer; cdecl;

  // Files management functions
    LoadFileData: function(const fileName: PUTF8Char; bytesRead: PCardinal): PByte; cdecl;
    SaveFileData: procedure(const fileName: PUTF8Char; data: Pointer; bytesToWrite: Cardinal); cdecl;
    LoadFileText: function(const fileName: PUTF8Char): PUTF8Char; cdecl;
    SaveFileText: procedure(const fileName: PUTF8Char; text: PUTF8Char); cdecl;
    FileExists: function(const fileName: PUTF8Char): boolean; cdecl;
    IsFileExtension: function(const fileName: PUTF8Char; const ext: PUTF8Char): boolean; cdecl;
    DirectoryExists: function(const dirPath: PUTF8Char): boolean; cdecl;
    GetExtension: function(const fileName: PUTF8Char): PUTF8Char; cdecl;
    GetFileName: function(const filePath: PUTF8Char): PUTF8Char; cdecl;
    GetFileNameWithoutExt: function(const filePath: PUTF8Char): PUTF8Char; cdecl;
    GetDirectoryPath: function(const filePath: PUTF8Char): PUTF8Char; cdecl;
    GetPrevDirectoryPath: function(const dirPath: PUTF8Char): PUTF8Char; cdecl;
    GetWorkingDirectory: function: PUTF8Char; cdecl;
    GetDirectoryFiles: function(const dirPath: PUTF8Char; count: PInteger): PPUTF8Char; cdecl;
    ClearDirectoryFiles: procedure; cdecl;
    ChangeDirectory: function(const dir: PUTF8Char): boolean; cdecl;
    IsFileDropped: function: boolean; cdecl;
    GetDroppedFiles: function(count: PInteger): PPUTF8Char; cdecl;
    ClearDroppedFiles: procedure; cdecl;
    GetFileModTime: function(const fileName: PUTF8Char): Integer; cdecl;

    CompressData: function(data: PByte; dataLength: Integer; compDataLength: PInteger): PByte; cdecl;
    DecompressData: function(compData: PByte; compDataLength: Integer; dataLength: PInteger): PByte; cdecl;

  // Persistent storage management
    SaveStorageValue: procedure(position: Cardinal; value: Integer); cdecl;
    LoadStorageValue: function(position: Cardinal): Integer; cdecl;

    OpenURL: procedure(const url: PUTF8Char); cdecl;

  //------------------------------------------------------------------------------------
  // Input Handling Functions (Module: core)
  //------------------------------------------------------------------------------------

  // Input-related functions: keyboard
    IsKeyPressed: function(key: Integer): boolean; cdecl;
    IsKeyDown: function(key: Integer): boolean; cdecl;
    IsKeyReleased: function(key: Integer): boolean; cdecl;

  // Input-related functions: gamepads
    IsKeyUp: function(key: Integer): boolean; cdecl;
    SetExitKey: procedure(key: Integer); cdecl;
    GetKeyPressed: function: Integer; cdecl;
    IsGamepadAvailable: function(gamepad: Integer): boolean; cdecl;
    IsGamepadName: function(gamepad: Integer; const name: PUTF8Char): boolean; cdecl;
    GetGamepadName: function(gamepad: Integer): PUTF8Char; cdecl;
    IsGamepadButtonPressed: function(gamepad: Integer; button: Integer): boolean; cdecl;
    IsGamepadButtonDown: function(gamepad: Integer; button: Integer): boolean; cdecl;
    IsGamepadButtonReleased: function(gamepad: Integer; button: Integer): boolean; cdecl;
    IsGamepadButtonUp: function(gamepad: Integer; button: Integer): boolean; cdecl;
    GetGamepadButtonPressed: function: Integer; cdecl;
    GetGamepadAxisCount: function(gamepad: Integer): Integer; cdecl;
    GetGamepadAxisMovement: function(gamepad: Integer; axis: Integer): Single; cdecl;

  // Input-related functions: mouse
    IsMouseButtonPressed: function(button: Integer): boolean; cdecl;
    IsMouseButtonDown: function(button: Integer): boolean; cdecl;
    IsMouseButtonReleased: function(button: Integer): boolean; cdecl;
    IsMouseButtonUp: function(button: Integer): boolean; cdecl;
    GetMouseX: function: Integer; cdecl;
    GetMouseY: function: Integer; cdecl;
    GetMousePosition: function: TVector2; cdecl;
    SetMousePosition: procedure(x: Integer; y: Integer); cdecl;
    SetMouseOffset: procedure(offsetX: Integer; offsetY: Integer); cdecl;
    SetMouseScale: procedure(scaleX: Single; scaleY: Single); cdecl;
    GetMouseWheelMove: function: Integer; cdecl;

  // Input-related functions: touch
    GetTouchX: function: Integer; cdecl;
    GetTouchY: function: Integer; cdecl;
    GetTouchPosition: function(index: Integer): TVector2; cdecl;

  //------------------------------------------------------------------------------------
  // Gestures and Touch Handling Functions (Module: gestures)
  //------------------------------------------------------------------------------------
    SetGesturesEnabled: procedure(gestureFlags: Cardinal); cdecl;
    IsGestureDetected: function(gesture: Integer): boolean; cdecl;
    GetGestureDetected: function: Integer; cdecl;
    GetTouchPointsCount: function: Integer; cdecl;
    GetGestureHoldDuration: function: Single; cdecl;
    GetGestureDragVector: function: TVector2; cdecl;
    GetGestureDragAngle: function: Single; cdecl;
    GetGesturePinchVector: function: TVector2; cdecl;
    GetGesturePinchAngle: function: Single; cdecl;

  //------------------------------------------------------------------------------------
  // Camera System Functions (Module: camera)
  //------------------------------------------------------------------------------------
    SetCameraMode: procedure(camera: TCamera; mode: Integer); cdecl;
    UpdateCamera: procedure(camera: PCamera); cdecl;

    SetCameraPanControl: procedure(panKey: Integer); cdecl;
    SetCameraAltControl: procedure(altKey: Integer); cdecl;
    SetCameraSmoothZoomControl: procedure(szKey: Integer); cdecl;
    SetCameraMoveControls: procedure(frontKey: Integer; backKey: Integer; rightKey: Integer; leftKey: Integer; upKey: Integer; downKey: Integer); cdecl;

  //------------------------------------------------------------------------------------
  // Basic Shapes Drawing Functions (Module: shapes)
  //------------------------------------------------------------------------------------
